# jqwerty

./: .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix
src/: jqwerty-addon.conf.in  jqwerty-im.conf.in  jqwerty.cpp  jqwerty.h
